--- a/MyApplication/app/src/main/res/layout/layout_detail_movie.xml
+++ b/MyApplication/app/src/main/res/layout/layout_detail_movie.xml
@@ -60,6 +60,7 @@
         android:background="@color/bg_menu"
         android:paddingLeft="@dimen/_16sdp"
         android:paddingRight="@dimen/_16sdp"
+        android:layout_marginBottom="@dimen/_8sdp"
         android:layout_below="@+id/linearlayout_detail_movie">
         <LinearLayout
             android:layout_width="wrap_content"
