--- a/MyApplication/app/src/main/res/values/colors.xml
+++ b/MyApplication/app/src/main/res/values/colors.xml
@@ -8,5 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="bg_menu">#2F333F</color>
+    <color name="bg_chapter">#393e4d</color>
     <color name="sub_title">#FFF</color>
+    <color name="selected_color">#4cffff</color>
 </resources>
