--- a/MyApplication/app/src/main/res/layout/activity_detail_movie.xml
+++ b/MyApplication/app/src/main/res/layout/activity_detail_movie.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetailMovieActivity">
+    tools:context=".view.DetailMovieActivity">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_activity_detail_movie"
         android:layout_width="match_parent"
