--- a/MyApplication/app/src/main/res/layout/activity_home.xml
+++ b/MyApplication/app/src/main/res/layout/activity_home.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:fitsSystemWindows="true"
     android:background="@drawable/activity_home_background"
-    tools:context=".HomeActivity">
+    tools:context=".view.HomeActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_activity_home"
