--- a/MyApplication/app/src/main/res/layout/layout_chapters_movie.xml
+++ b/MyApplication/app/src/main/res/layout/layout_chapters_movie.xml
@@ -4,12 +4,12 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingLeft="@dimen/_16sdp"
-    android:paddingRight="@dimen/_16sdp"
     android:background="@color/bg_chapter">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginRight="@dimen/_16sdp">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,6 +34,7 @@
         </LinearLayout>
 
         <ImageButton
+            android:id="@+id/btn_extend_layout_chapters"
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"
             android:layout_gravity="center_vertical">
@@ -41,12 +42,13 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview_layout_chapters"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
     </androidx.recyclerview.widget.RecyclerView>
     <Button
-        android:id="@+id/btn_full_chapters_movie"
+        android:id="@+id/btn_full_layout_chapters"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
