--- a/MyApplication/app/src/main/res/layout/layout_detail_chapters_movie.xml
+++ b/MyApplication/app/src/main/res/layout/layout_detail_chapters_movie.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@color/bg_menu">
+    android:background="@color/bg_primary">
     <RelativeLayout
         android:id="@+id/realativelayout_detail_chapters_movie"
         android:layout_width="match_parent"
@@ -14,14 +14,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="fitEnd"
-            android:background="@drawable/activity_home_background" />
+            android:src="@drawable/img_movie_placeholder" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:orientation="vertical"
             android:paddingLeft="@dimen/_16sdp"
-            android:paddingRight="@dimen/_16sdp">
+            android:paddingRight="@dimen/_16sdp"
+            android:background="@drawable/background_item_poster_header">
 
             <TextView
                 android:id="@+id/txt_title_detail_chapters_movie"
