--- a/MyApplication/app/src/main/res/layout/layout_detail_movie.xml
+++ b/MyApplication/app/src/main/res/layout/layout_detail_movie.xml
@@ -37,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_7sdp"
-                android:text="Phim bộ"
+                android:text="Phim lẻ"
                 android:textColor="@color/white"
                 android:textSize="10dp" />
             <TextView
