--- a/MyApplication/app/src/main/res/layout/item_chapter_movie.xml
+++ b/MyApplication/app/src/main/res/layout/item_chapter_movie.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/_57sdp"
-    android:layout_height="@dimen/_57sdp"
-    android:padding="@dimen/_5sdp"
-    android:background="@drawable/background_itemchapter">
+    android:layout_width="@dimen/_52sdp"
+    android:layout_height="@dimen/_52sdp"
+    android:layout_marginBottom="@dimen/_5sdp"
+    android:background="@color/purple_700">
+
     <TextView
         android:id="@+id/txt_number_item_chapter"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textSize="16dp"
-        android:textColor="@color/white"
+        android:gravity="center"
         android:text="1"
-        android:gravity="center"/>
-</LinearLayout>
+        android:textColor="@color/white"
+        android:textSize="16dp" />
+</androidx.constraintlayout.widget.ConstraintLayout>
